--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Tuna No Crust",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "knex": "^0.16.2",
     "mysql": "^2.16.0"
